fix: create ticket and create employee view labels

--- a/Views/Employee/Create.cshtml
+++ b/Views/Employee/Create.cshtml
@@ -13,7 +13,7 @@
     </div>
 
     <div class="mb-3">
-        <label asp-for="Cpf" class="form-label"></label>
+        <label asp-for="Cpf" class="form-label">CPF</label>
         <input asp-for="Cpf" class="form-control" />
         <span asp-validation-for="Cpf" class="text-danger"></span>
     </div>
