--- a/Views/Ticket/Create.cshtml
+++ b/Views/Ticket/Create.cshtml
@@ -14,7 +14,7 @@
             
             <div class="row mb-3">
                 <div class="col-md-6">
-                    <label asp-for="EmployeeId" class="form-label"></label>
+                    <label asp-for="EmployeeId" class="form-label">ID do funcionário</label>
                     <select asp-for="EmployeeId" class="form-select" 
                             asp-items="@(new SelectList(ViewBag.Employees, "Id", "Name"))">
                         <option value="">Selecione um funcionário</option>
@@ -23,7 +23,7 @@
                 </div>
                 
                 <div class="col-md-6">
-                    <label asp-for="Quantity" class="form-label"></label>
+                    <label asp-for="Quantity" class="form-label">Quantidade</label>
                     <input asp-for="Quantity" class="form-control" />
                     <span asp-validation-for="Quantity" class="text-danger"></span>
                 </div>
@@ -32,7 +32,7 @@
             <div class="d-flex justify-content-between mt-4">
                 <a asp-action="Index" class="btn btn-secondary">
                     <i class="bi bi-arrow-left"></i> Voltar
-                </a>
+                </a>4
                 <button type="submit" class="btn btn-primary">
                     <i class="bi bi-save"></i> Salvar
                 </button>
